test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/incompatible_elem_type_compound_init.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(0)
  ,
  const int(0)
  ,
  const double(1.0)
  }
  ;
  }
